# apex-tools

./: README.md  README.txt
APECS/: vexGetSources2cat.py
APECS/2015/: TweakedLpoint.apecs  copyToBonn.sh  het230_def.apecs  het230_setup.apecs  t-091.f-0006-2013.cat  t-091.f-0006-2013.lin  vlbi-2015.cat  vlbi-2015.lin  vlbi_calibrate.apecs  vlbi_calibrateget.apecs  vlbi_commands.py  vlbi_commands.py.2013  vlbi_interactive.py  vlbi_onsource.apecs
APECS/2018/: apecsVLBI.py  pi230_setup.apecs  t-0101.f-9996a-2018.cat  t-0101.f-9996a-2018.lin  vex2apecs.py  vlbi-pi230_commands.py  xml2apecs.py
APECS/2020/: NFLASH230_setup.apecs  t-0101.f-9996a-2018.cat  t-0101.f-9996a-2018.lin  vlbi-NFLASH230_commands.py
APECS/2021/: EHT2021-apecs-onScans.csv  NFLASH230_setup.apecs  vex2apecs.py  vlbi-NFLASH230_commands.py
APECS/2022/: NFLASH230_setup.apecs  SEPIA345_setup.apecs  followApecsVLBI.py  vex2apecs.py  vlbi-NFLASH230_commands.py
APECS/2023/: NFLASH230_setup.apecs  NFLASH460_setup.apecs  SEPIA345_setup.apecs  dummy_schedblock.py  redPoint.results  reset.py  t-0111.f-9996a-2023.lin
APECS/2024/: NFLASH230_setup.apecs  NFLASH260_setup.apecs  NFLASH460_setup.apecs  SEPIA345_setup.apecs  apecsVLBI.py  followApecsVLBI.py  print_dummy_schedblock.py  t-0113.f-9996a-2024.cat  t-0113.f-9996a-2024.lin  vex2apecs.py  vlbi-NFLASH230_commands.py  vlbi-NFLASH260_commands.py  vlbi-NFLASH460_commands.py  vlbi-SEPIA345_commands.py
APECS/2024nov/: t-0114.f-9996a-2024.cat  t-0114.f-9996a-2024.lin  vlbi-N3AR90xNFLASH260_commands.py
APECS/2024oct/: N3AR90_setup.apecs  N3AR90xNFLASH230_setup.apecs  N3AR90xNFLASH260_setup.apecs  NFLASH260_EHT_setup.apecs  NFLASH260_setup.apecs  SEPIA690_setup.apecs  m-0114.f-9516a-2024.cat  m-0114.f-9516a-2024.lin  vlbi-N3AR90xNFLASH230_commands.py  vlbi-N3AR90xNFLASH260_commands.py  vlbi-NFLASH260_EHT_commands.py  vlbi-NFLASH260_commands.py  vlbi-SEPIA690_commands.py
APECS/2025/: N3AR90_DWKim104_setup.apecs  N3AR90_DWKim114_setup.apecs  N3AR90_DWKim_setup.apecs  N3AR90_GMVA86_setup.apecs  N3AR90_GMVA91_setup.apecs  N3AR90_GMVA94_setup.apecs  N3AR90_setup.apecs  N3AR90xNFLASH260_setup.apecs  NFLASH230_setup.apecs  NFLASH260_setup.apecs  SEPIA345_setup.apecs  SEPIA660_setup.apecs  SEPIA690_setup.apecs  collectWx.py  monitorWx.py  t-0115.f-9996a-2025.cat  t-0115.f-9996a-2025.lin  vlbi-N3AR90_DWKim104_commands.py  vlbi-N3AR90_DWKim114_commands.py  vlbi-N3AR90_DWKim_commands.py  vlbi-N3AR90_GMVA86_commands.py  vlbi-N3AR90_GMVA91_commands.py  vlbi-N3AR90_GMVA94_commands.py  vlbi-N3AR90xNFLASH260_commands.py  vlbi-NFLASH230_commands.py  vlbi-NFLASH260_commands.py  vlbi-SEPIA345_commands.py  vlbi-SEPIA660_commands.py
APECS/2026/: N3AR90_GMVA86_setup.apecs  N3AR90_GMVA91_setup.apecs  N3AR90_GMVA94_setup.apecs  N3AR90_mk036_setup.apecs  N3AR90_mk037a_setup.apecs  N3AR90_mk037b_setup.apecs  N3AR90_mk037c_setup.apecs  N3AR90_mk037d_setup.apecs  N3AR90xNFLASH260_setup.apecs  NFLASH230_setup.apecs  lpointo.py  reset.py  t-0117.f-9996a-2026.cat  t-0117.f-9996a-2026.lin  vlbi-N3AR90_GMVA86_commands.py  vlbi-N3AR90_GMVA91_commands.py  vlbi-N3AR90_GMVA94_commands.py  vlbi-N3AR90_mk036_commands.py  vlbi-N3AR90_mk037a_commands.py  vlbi-N3AR90_mk037b_commands.py  vlbi-N3AR90_mk037c_commands.py  vlbi-N3AR90_mk037d_commands.py  vlbi-N3AR90xNFLASH260_commands.py  vlbi-NFLASH230_commands.py  vlbi_tone.py  wlpo.py
APECS/corba/: Makefile  (+33 more)
Correlation/: remote_capture_OpenMPI.txt  remote_capture_crossIf.sh  remote_capture_if0.sh  remote_capture_if1.sh  vdifTimealignFileset.py
Correlation/m5tone/: AUTHORS  Makefile.am  NEWS  README  configure.ac  m5tone_convert.sh  m5tone_eht2021.c  m5tone_eht2021_Kt.c
DBBC2/: consoleFILA10G.py  fila10_v3_125MHz_APEX.pyCmd
DBBC3/: setupDBBC3_OCT_D_APEX.sh
EHTControlPC/: apex-backends.conf  backend.conf-almaTestJan2020  backend.conf-apr2025-fpt  backend.conf-apr2025-gmva  backend.conf-apr2026-gmva  backend.conf-eht2020  backend.conf-eht2021  backend.conf-eht2022  backend.conf-eht2024  backend.conf-eht2025  backend.conf-eht2025-345G-e25f08  backend.conf-gmva2024  backend.conf-nov2024-690G  backend.conf-oct2025-fpt  backend.conf-sept2025-gmva  backendctl-gmva.py  dhcpcd.conf  dnsmasq-conf  dnsmasq-conf.txt  dnsmasq-service  exports  hosts  mount_helper.sh  nftables-conf  ntp.conf  pacman.conf  pacman.txt  resolv.conf  ssh_authorized_keys-CC-oper  ssh_authorized_keys-recorders  unmount_helper.sh  vex2xml.py  vnc issues.txt
EHTVLBImonitor/: APEX.map_2022  APEX.map_2023  APEX.map_2024  getCalResult-infos.txt  iMaser.py  info.txt  parameter-APEX.map_  reanimate-EHTVLBImonitor.sh  sitedata-MYSITE.py  sitedata-__init__.py  vlbimon-config.py
EuroTherm/: Makefile  eurotherm_cli.cpp  lantronix-cfg.txt  queryEurothermUDP.c
FieldSystem/: README.txt  mk64.pl  oprin-Makefile  rc.local
GPIB-tools/: ChangeLog  Makefile
Mark6/: Haystack-ftp.txt  M6Utils-1.0.9.tgz  README.txt  Version1.3.txt  Versions-m6.txt  apt-sources-list  create-schedule.py  dpkg-selections.sh  dplane-1.21.tgz  edit-deb-deps.sh  etc-default-mark6  etc-network-interfaces  etc-security-limits-conf  m6cc.py  mk6rec.sh  vex2xml.py  wheezy-dpkg-manualinstalls.lst  wheezy-dpkg-selections.lst
Maser/: Config.cfg  counterMonitorQuery.py  eht-2018y111d-trackE-maser-gps-pollCounters.out  hmaser-cron.sh  hmaser-crontab  plotMaserGPSlog.py
Optics/: APEX-A-C2-control.txt
PCal/m5tone/: ChangeLog  Makefile.am  README  configure.ac  m5tone_convert.sh  m5tone_eht.c  m5tone_hardcoded_confs.h  m5tone_mpi_eht.cpp  m5tone_threaded_eht.c
R2DBE/: APEX_config.py  APEX_r2dbe1_setup.sh  APEX_r2dbe2_setup.sh  Makefile  R2DBE_config.py  README.txt  alc.py  alc_scheduled.py  boot-environment.txt  dnsmasq.conf.r2dbe-APEX  exports.r2dbe-APEX  m5specR2DBE-Makefile.am  m5specR2DBE.c  manual_core_tune.py  mark6_inputstream.m6cmd  quickspecR2DBE.py  r2dbe-1.cfg  r2dbe-2.cfg  r2dbe_start.py  requantizeR2DBE.py  timing_query.py
VlbiSH/: link.txt  setup.txt  vlbish  vlbish.29sept2017
sensors/: README.txt  monitorMark6.py
zbt/: parallelSnapshot.sh  vdifTimealignFileset.py  zerob1000x2048.v2d  zerob1000x2048.vex
(+1038 files in other folders)
